#199 [Lokesh/Nimesh] Spacing between full width image module and text fixed

--- a/article/static/article/css/blocks.less
+++ b/article/static/article/css/blocks.less
@@ -13,6 +13,10 @@
   }
   .full-width-image-block {
     margin: 10px 0px 20px 0px !important;
+    .caption {
+      padding-bottom: 3px;
+      padding-top: 3px;
+    }
   }
 
   .image-block {
